# SwiCC_RP2040

./: CMakeLists.txt  README.md
documentation/: SwiCC_UART_Bridge.uf2  USB_UART_RP2040.uf2
src/: SwiCC_RP2040.c  SwiCC_RP2040.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
